--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
   "author": "David Mellul",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^8.2.3",
+    "axios": "^0.19.1",
+    "electron": "^8.2.5",
+    "electron-context-menu": "^1.1.0",
     "electron-packager": "^13.1.1",
     "electron-rebuild": "^1.10.1",
     "electron-settings": "^2.2.2",
-    "electron-context-menu": "^1.1.0",
-    "axios": "^0.19.1"
+    "asar": "^3.0.3"
   },
   "dependencies": {
+    "axios": "^0.19.1",
+    "electron": "^8.2.5",
     "electron-context-menu": "^1.1.0",
-    "electron-settings": "^2.2.2",
-    "axios": "^0.19.1"
+    "electron-settings": "^2.2.2"
   },
   "productName": "Opale"
 }
